<resources>
    <string name="app_name">solar_energy_usage</string>
    <string name="LogIn">Log In</string>
    <string name="register">Register</string>
    <string name="invoices">Invoices</string>
    <string name="payment">Payment</string>
    <string name="card_number">card number</string>
    <string name="security_code">security code</string>
    <string name="cardholder_name">cardholder name</string>
    <string name="expiration_date">expiration date</string>
    <string name="pay">pay</string>
    <string name="car">Car</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="devices">Devices</string>
    <string name="invoice">Invoices</string>
    <string name="maintenance">Maintenance</string>
    <string name="suggestions">Suggestions</string>
    <string name="weather">Weather</string>
    <string name="log_out">Log Out</string>
    <string name="edit_room">Edit Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="room_name">Room name</string>
    <string name="device_name">Device name</string>
    <string name="device_type">Device type</string>
    <string name="room_type">Room type</string>
    <string name="edit_device">Edit Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="device_details">Details</string>
    <string name="device_statistics">Statistics</string>
    <string name="active_devices">Active devices</string>
    <string name="providers">Providers</string>
    <string name="long_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="invalidate">Invalidate</string>
    <string name="contract">Contract</string>
    <string name="today">Today</string>
    <string name="solar_panel">Solar Panel</string>
    <string name="solar_panels">Solar Panels</string>
    <string name="card_details">Card details</string>
</resources>