<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="User Name + Picture">
            <menu>
                <item
                    android:id="@+id/item1"
                    android:icon="@drawable/ic_devices"
                    android:onClick="onDevicesButtonClicked"
                    android:title="@string/devices" />
                <item
                    android:id="@+id/item2"
                    android:icon="@drawable/invoices"
                    android:onClick="onInvoiceButtonClicked"
                    android:title="@string/invoice" />
                <item
                    android:id="@+id/item3"
                    android:icon="@drawable/ic_maintenance"
                    android:title="@string/maintenance" />
                <item
                    android:id="@+id/item4"
                    android:icon="@drawable/car"
                    android:onClick="onCarButtonClicked"
                    android:title="@string/car" />
                <item
                    android:id="@+id/item5"
                    android:icon="@drawable/ic_suggestions"
                    android:title="@string/suggestions" />
                <item
                    android:id="@+id/item6"
                    android:icon="@drawable/weather"
                    android:onClick="onWeatherButtonClicked"
                    android:title="@string/weather" />
                <item
                    android:id="@+id/item7"
                    android:icon="@drawable/ic_provider"
                    android:onClick="onProvidersButtonClicked"
                    android:title="@string/providers" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/logOutMenuButton"
                    android:icon="@drawable/ic_logout"
                    android:onClick="onLogOutButtonClicked"
                    android:title="@string/log_out" />
            </menu>
        </item>
    </group>

</menu>